--- a/BOOTSTRAP/teste.html
+++ b/BOOTSTRAP/teste.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <title>Camila Freitas</title>
@@ -10,11 +10,60 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <style>
+        body {
+            font-family: Arial, Helvetica, sans-serif;
+        }
+
+        .btn-warning {
+            background-color: #000;
+            border-color: #000;
+            color: white;
+            border-radius: 0;
+            text-transform: uppercase;
+
+        }
+
+        .btn-warning:hover {
+            background-color: red;
+            border-color: #000;
+            color: white;
+            border-radius: 0;
+        }
+    </style>
 </head>
 
 <body>
-    <div class="row">
-        <h1>Esse é o meu site!</h1>
+    <div style="background-color: black;" class="container-fluid">
+        <div style="background-color: whitesmoke;" class="container">
+            <h1 class="text-center">Esse é o meu site!</h1>
+            <div class="row">
+                <div class="col-lg-8 col-md-6">
+
+                    <h2>Investigado no STF, Weintraub anuncia demissão em vídeo</h2>
+                    <p>O ministro da Educação, Abraham Weintraub, anunciou nesta quinta-feira (18) que deixará o cargo.
+                        A
+                        informação foi dada em um vídeo publicado pelo próprio Weintraub, em que o ministro aparece ao
+                        lado
+                        do
+                        presidente Jair Bolsonaro e lê um texto de despedida. O nome do substituto não foi informado.
+                    </p>
+                    <a class="btn btn-warning btn-lg" href="#" role="button">Leia...</a>
+                </div>
+                <div class="col-lg-4 col-md-6">
+                    <h2>Flu e Bota vão ao STJD contra o retorno do Campeonato Carioca</h2>
+                    <p>Botafogo e Fluminense irão ao Superior Tribunal de Justiça Desportiva para não voltar a jogar o
+                        Campeonato Carioca na próxima segunda-feira, como definiu a Ferj. Contrária ao retorno do
+                        Estadual
+                        no
+                        mês de junho, a dupla recorrerá à esfera nacional para não sofrer punições por não entrar em
+                        campo
+                        daqui
+                        a quatro dias.</p>
+                </div>
+            </div>
+        </div>
+
     </div>
 
     <!-- Optional JavaScript -->
