--- a/css/material-design/materialize_sandbox_start/2_4_floating.html
+++ b/css/material-design/materialize_sandbox_start/2_4_floating.html
@@ -125,48 +125,99 @@
     <!-- START HERE -->
 
     <!-- FLOATING BUTTONS -->
-    <button>
-      <i></i>
+    <!-- <h3>Floating Buttons</h3> -->
+    <!-- <hr> -->
+    <!-- <button class="btn-floating btn-large waves-effect waves-light red">
+      <i class="material-icons">add</i>
     </button>
-    <button>
-      <i></i>
-    </button>
+    <a class="btn-floating btn-large waves-effect waves-light blue">
+      <i class="material-icons">edit</i>
+    </a> -->
     <!-- PULSE EFFECT -->
-    <button>
-      <i></i>
-    </button>
+    <!-- <button class="btn-floating btn-large waves-effect waves-light green pulse">
+      <i class="material-icons">publish</i>
+    </button> -->
 
     <!-- SIMPLE FIXED ACTION BUTTON -->
-    <div>
-      <button>
-        <i></i>
+    <!-- <div class="fixed-action-btn">
+      <button class="btn-floating btn-large red waves-effect waves-light">
+        <i class="material-icons">add</i>
       </button>
-    </div>
+    </div>  -->
 
     <!-- FIXED ACTION BUTTON [horizontal, click-to-toggle] -->
-    <div>
-      <a>
-        <i></i>
+    <div class="fixed-action-btn horizontal">
+      <a class="btn-floating btn-large red">
+        <i class="material-icons">mode_edit</i>
       </a>
       <ul>
         <li>
-          <a>
-            <i></i>
+          <a class="btn-floating red">
+            <i class="material-icons">insert_chart</i>
           </a>
         </li>
         <li>
-          <a>
-            <i></i>
+          <a class="btn-floating blue">
+            <i class="material-icons">add</i>
           </a>
         </li>
         <li>
-          <a>
-            <i></i>
+          <a class="btn-floating green">
+            <i class="material-icons">file_upload</i>
           </a>
         </li>
         <li>
-          <a>
-            <i></i>
+          <a class="btn-floating indigo">
+            <i class="material-icons"><div class="preloader-wrapper small active">
+              <!-- spinner-blue -->
+              <div class="spinner-layer spinner-blue">
+                <div class="circle-clipper left">
+                  <div class="circle"></div>
+                </div>
+                <div class="gap-patch">
+                  <div class="circle"></div>
+                </div>
+                <div class="circle-clipper right">
+                  <div class="circle"></div>
+                </div>
+              </div>
+              <!-- spinner-red -->
+              <div class="spinner-layer spinner-red">
+                <div class="circle-clipper left">
+                  <div class="circle"></div>
+                </div>
+                <div class="gap-patch">
+                  <div class="circle"></div>
+                </div>
+                <div class="circle-clipper right">
+                  <div class="circle"></div>
+                </div>
+              </div>
+              <!-- spinner-yellow -->
+              <div class="spinner-layer spinner-yellow">
+                <div class="circle-clipper left">
+                  <div class="circle"></div>
+                </div>
+                <div class="gap-patch">
+                  <div class="circle"></div>
+                </div>
+                <div class="circle-clipper right">
+                  <div class="circle"></div>
+                </div>
+              </div>
+              <!-- spinner-greem -->
+              <div class="spinner-layer spinner-green">
+                <div class="circle-clipper left">
+                  <div class="circle"></div>
+                </div>
+                <div class="gap-patch">
+                  <div class="circle"></div>
+                </div>
+                <div class="circle-clipper right">
+                  <div class="circle"></div>
+                </div>
+              </div>
+            </div></i>
           </a>
         </li>
       </ul>
