--- a/css/material-design/materialize_sandbox_start/3_1_cards.html
+++ b/css/material-design/materialize_sandbox_start/3_1_cards.html
@@ -128,7 +128,8 @@
         <!-- SIMPLE CARD WITHOUT TITLE -->
         <div class="card">
           <div class="card-content">
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi harum enim inventore ullam expedita nesciunt ea
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi harum enim inventore ullam expedita
+              nesciunt ea
               voluptatem corporis iusto sint?</p>
           </div>
         </div>
@@ -136,7 +137,8 @@
         <!-- ADD COLOR -->
         <div class="card red darken-2">
           <div class="card-content white-text">
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi harum enim inventore ullam expedita nesciunt ea
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi harum enim inventore ullam expedita
+              nesciunt ea
               voluptatem corporis iusto sint?</p>
           </div>
         </div>
@@ -146,7 +148,8 @@
         <div class="card">
           <div class="card-content">
             <span class="card-title">Card With Title</span>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi harum enim inventore ullam expedita nesciunt ea
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi harum enim inventore ullam expedita
+              nesciunt ea
               voluptatem corporis iusto sint?</p>
           </div>
           <!-- ADD LINKS -->
@@ -168,7 +171,8 @@
             <span class="card-title">Card Image</span>
           </div>
           <div class="card-content">
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi harum enim inventore ullam expedita nesciunt ea
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi harum enim inventore ullam expedita
+              nesciunt ea
               voluptatem corporis iusto sint?</p>
           </div>
           <div class="card-action">
@@ -180,14 +184,15 @@
         <!-- CARD WITH IMAGE & FLOATING BUTTON -->
         <div class="card blue-grey lighten-4">
           <div class="card-image">
-            <img src="" alt="">
-            <span>Image & Button</span>
-            <a>
-              <i></i>
+            <img src="img/img2.jpg">
+            <span class="card-title">Image & Button</span>
+            <a class="btn-floating halfway-fab waves-effect waves-light red">
+              <i class="material-icons">add</i>
             </a>
           </div>
-          <div>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi harum enim inventore ullam expedita nesciunt ea
+          <div class="card-content">
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi harum enim inventore ullam expedita
+              nesciunt ea
               voluptatem corporis iusto sint?</p>
           </div>
         </div>
@@ -198,13 +203,13 @@
     <div class="row">
       <div class="col s12 m6">
         <!-- HORIZONTAL CARD -->
-        <div>
-          <div>
-            <img src="">
+        <div class="card horizontal">
+          <div class="card-image">
+            <img src="img/img3.jpg">
           </div>
-          <div>
-            <div>
-              <span>Horizontal</span>
+          <div class="card-stacked">
+            <div class="card-content">
+              <span class="card-title">Horizontal</span>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
           </div>
@@ -212,26 +217,26 @@
       </div>
       <div class="col s12 m6">
         <!-- CARD REVEAL -->
-        <div>
-          <div>
-            <img src="">
+        <div class="card">
+          <div class="card-image waves-effect waves-light waves-block">
+            <img class="activator" src="img/img4.jpg">
           </div>
-          <div>
-            <span>Card Reveal
-              <i></i>
+          <div class="card-content">
+            <span class="card-title activator">Card Reveal
+              <i class="material-icons">more_vert</i>
             </span>
             <p>
               <!-- add activator to anything -->
-              <a href="#!">Read More</a>
+              <a class="activator" href="#!">Read More</a>
             </p>
           </div>
           <!-- inside of reveal -->
-          <div>
-            <span>Card Title
-              <i></i>
+          <div class="card-reveal">
+            <span class="card-title">Card Title
+              <i class="material-icons">close</i>
             </span>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut ad repudiandae sequi at quis assumenda iusto dolor
-              in, maxime earum debitis ea vero aspernatur ipsum, totam iste molestias natus! Ullam?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut ad repudiandae sequi at quis assumenda iusto
+              dolorin, maxime earum debitis ea vero aspernatur ipsum, totam iste molestias natus! Ullam?</p>
           </div>
         </div>
       </div>
@@ -243,8 +248,10 @@
         <div>
           <div>
             <span>Tabbed Card</span>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ex, rem obcaecati. Recusandae laborum, odit commodi
-              fuga dolores dolorem, minima hic similique illo, ipsam eos. Perspiciatis omnis voluptas sunt delectus ab?</p>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ex, rem obcaecati. Recusandae laborum, odit
+              commodi
+              fuga dolores dolorem, minima hic similique illo, ipsam eos. Perspiciatis omnis voluptas sunt delectus ab?
+            </p>
           </div>
           <div>
             <ul>
@@ -272,8 +279,10 @@
         <div>
           <div>
             <span>Tabbed Card</span>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ex, rem obcaecati. Recusandae laborum, odit commodi
-              fuga dolores dolorem, minima hic similique illo, ipsam eos. Perspiciatis omnis voluptas sunt delectus ab?</p>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ex, rem obcaecati. Recusandae laborum, odit
+              commodi
+              fuga dolores dolorem, minima hic similique illo, ipsam eos. Perspiciatis omnis voluptas sunt delectus ab?
+            </p>
           </div>
           <div>
             <!-- make tabs transparent -->
@@ -308,7 +317,8 @@
             <span>Card Image</span>
           </div>
           <div>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi harum enim inventore ullam expedita nesciunt ea
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi harum enim inventore ullam expedita
+              nesciunt ea
               voluptatem corporis iusto sint?</p>
           </div>
           <div>
@@ -324,7 +334,8 @@
             <span>Card Image</span>
           </div>
           <div>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi harum enim inventore ullam expedita nesciunt ea
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi harum enim inventore ullam expedita
+              nesciunt ea
               voluptatem corporis iusto sint?</p>
           </div>
           <div>
@@ -340,7 +351,8 @@
             <span>Card Image</span>
           </div>
           <div>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi harum enim inventore ullam expedita nesciunt ea
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi harum enim inventore ullam expedita
+              nesciunt ea
               voluptatem corporis iusto sint?</p>
           </div>
           <div>
@@ -354,29 +366,37 @@
     <div class="row">
       <div class="col s12 m3">
         <div>
-          <span>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam magni aut mollitia quis? Ab voluptate quaerat libero
-            voluptatibus quisquam in dolorum nobis hic. Suscipit dignissimos laboriosam id nesciunt debitis exercitationem.
+          <span>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam magni aut mollitia quis? Ab voluptate
+            quaerat libero
+            voluptatibus quisquam in dolorum nobis hic. Suscipit dignissimos laboriosam id nesciunt debitis
+            exercitationem.
           </span>
         </div>
       </div>
       <div class="col s12 m3">
         <div>
-          <span>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam magni aut mollitia quis? Ab voluptate quaerat libero
-            voluptatibus quisquam in dolorum nobis hic. Suscipit dignissimos laboriosam id nesciunt debitis exercitationem.
+          <span>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam magni aut mollitia quis? Ab voluptate
+            quaerat libero
+            voluptatibus quisquam in dolorum nobis hic. Suscipit dignissimos laboriosam id nesciunt debitis
+            exercitationem.
           </span>
         </div>
       </div>
       <div class="col s12 m3">
         <div>
-          <span>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam magni aut mollitia quis? Ab voluptate quaerat libero
-            voluptatibus quisquam in dolorum nobis hic. Suscipit dignissimos laboriosam id nesciunt debitis exercitationem.
+          <span>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam magni aut mollitia quis? Ab voluptate
+            quaerat libero
+            voluptatibus quisquam in dolorum nobis hic. Suscipit dignissimos laboriosam id nesciunt debitis
+            exercitationem.
           </span>
         </div>
       </div>
       <div class="col s12 m3">
         <div>
-          <span>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam magni aut mollitia quis? Ab voluptate quaerat libero
-            voluptatibus quisquam in dolorum nobis hic. Suscipit dignissimos laboriosam id nesciunt debitis exercitationem.
+          <span>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam magni aut mollitia quis? Ab voluptate
+            quaerat libero
+            voluptatibus quisquam in dolorum nobis hic. Suscipit dignissimos laboriosam id nesciunt debitis
+            exercitationem.
           </span>
         </div>
       </div>
