--- a/css/projetos/6_2_project_files/travelville/index.html
+++ b/css/projetos/6_2_project_files/travelville/index.html
@@ -13,7 +13,7 @@
   <title>Custom Materialize Theme</title>
 </head>
 
-<body>
+<body id="home" class="scrollspy">
   <div class="nevares-navbar-completa">
     <div class="navbar-fixed">
       <nav class="teal">
@@ -54,7 +54,7 @@
     $(".button-collapse").sideNav();
 
    -->
-  <section class="slider">
+  <section class="slider scrollspy">
     <ul class="slides">
       <li>
         <img src="img/resort1.jpg" alt="Imagem do resort 01">
@@ -93,11 +93,11 @@
   </section>
 
   <!-- início do search  -->
-  <section class="section section-search teal darken-1 white-text center">
+  <section id="search" class="section section-search teal darken-1 white-text center scrollspy">
     <div class="container">
       <div class="row">
         <div class="col s12">
-          <h3>Search Destinations</h3>
+          <h3>o que você procura?</h3>
           <div class="input-field">
             <input class="white grey-text autocomplete" placeholder="Aruba, cancum..." type="text"
               id="autocomplete-input">
@@ -109,27 +109,27 @@
   <!-- fim do search  -->
 
   <!-- section dos ícones  (início) -->
-  <section class="section section-icons grey lighten-4 center">
+  <section class="section section-icons grey lighten-4 center scrollspy">
     <div class="container">
       <div class="row">
         <div class="col s12 m6 l4">
           <div class="card-panel">
             <i class="material-icons large teal-text">room</i>
-            <h4>Pick Where</h4>
+            <h4>Seu destino</h4>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut, tempore!</p>
           </div>
         </div>
         <div class="col s12 m6 l4">
           <div class="card-panel">
             <i class="material-icons large teal-text">airplanemode_active</i>
-            <h4>Fly</h4>
+            <h4>Vôos</h4>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut, tempore!</p>
           </div>
         </div>
         <div class="col s12 m6 l4">
           <div class="card-panel">
             <i class="material-icons large teal-text">monetization_on</i>
-            <h4>Lux</h4>
+            <h4>Parcele</h4>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut, tempore!</p>
           </div>
         </div>
@@ -141,23 +141,10 @@
 
 
   <!-- section dos destinos populares  (início) -->
-  <section class="section section-popular">
+  <section id="popular" class="section section-popular scrollspy">
     <div class="container">
       <div class="row">
-        <h4 class="center"><span class="teal-text">Popular</span> places</h4>
-        <div class="col s12 m4">
-          <div class="card">
-            <div class="card-image">
-              <img src="img/resort1.jpg">
-              <span class="card-title">Cancun</span>
-            </div>
-            <div class="card-content">
-              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ducimus, assumenda reprehenderit? Neque
-                quidem iure nihil?</p>
-            </div>
-          </div>
-        </div>
-
+        <h4 class="center"><span class="teal-text">Principais</span> destinos</h4>
         <div class="col s12 m4">
           <div class="card">
             <div class="card-image">
@@ -212,7 +199,7 @@
 
 
   <!-- section rede sociais  (início) -->
-  <section class="section section-follow teal darken-2 white-text center">
+  <section id="social" class="section section-follow teal darken-2 white-text center scrollspy">
     <div class="container">
       <div class="row">
         <div class="col s12">
@@ -239,6 +226,117 @@
   </section>
   <!-- section rede sociais  (fim) -->
 
+  <!-- section Galeria (início) -->
+  <section id="gallery" class="section section-gallery scrollspy">
+    <div class="container">
+      <h4 class="center"><span class="teal-text">Nossas </span>Fotos</h4>
+
+      <div class="row">
+        <div class="col s12 m3">
+          <img class="materialboxed responsive-img" src="https://source.unsplash.com/1600x900/?beach" alt="">
+        </div>
+        <div class="col s12 m3">
+          <img class="materialboxed responsive-img" src="https://source.unsplash.com/1600x900/?cancun" alt="">
+        </div>
+        <div class="col s12 m3">
+          <img class="materialboxed responsive-img" src="https://source.unsplash.com/1600x900/?bahamas" alt="">
+        </div>
+        <div class="col s12 m3">
+          <img class="materialboxed responsive-img" src="https://source.unsplash.com/1600x900/?resort" alt="">
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col s12 m3">
+          <img class="materialboxed responsive-img" src="https://source.unsplash.com/1600x900/?beaches" alt="">
+        </div>
+        <div class="col s12 m3">
+          <img class="materialboxed responsive-img" src="https://source.unsplash.com/1600x900/?travel" alt="">
+        </div>
+        <div class="col s12 m3">
+          <img class="materialboxed responsive-img" src="https://source.unsplash.com/1600x900/?bridge" alt="">
+        </div>
+        <div class="col s12 m3">
+          <img class="materialboxed responsive-img" src="https://source.unsplash.com/1600x900/?boat" alt="">
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col s12 m3">
+          <img class="materialboxed responsive-img" src="https://source.unsplash.com/1600x900/?water" alt="">
+        </div>
+        <div class="col s12 m3">
+          <img class="materialboxed responsive-img" src="https://source.unsplash.com/1600x900/?building" alt="">
+        </div>
+        <div class="col s12 m3">
+          <img class="materialboxed responsive-img" src="https://source.unsplash.com/1600x900/?trees" alt="">
+        </div>
+        <div class="col s12 m3">
+          <img class="materialboxed responsive-img" src="https://source.unsplash.com/1600x900/?cruise" alt="">
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- section  Galeria  (fim) -->
+
+  <!-- section  contatos  (início) -->
+  <section id="contact" class="section section-contact scrollspy">
+    <div class="container">
+      <div class="row">
+        <div class="col s12 m6">
+          <div class="card-panel teal white-text center">
+            <i class="material-icons medium">email</i>
+            <h5>Entramos em contato em breve</h5>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus, blanditiis! Accusantium animi nulla
+              odio error eligendi laborum cum dolore commodi.</p>
+          </div>
+          <ul class="collection with-header">
+            <li class="collection-header">
+              <h4>Endereço</h4>
+            </li>
+            <li class="collection-item">Tavelville agency</li>
+            <li class="collection-item">555 Beach rd, Suite 33</li>
+            <li class="collection-item">Miami Florida</li>
+          </ul>
+        </div>
+
+        <div class="col s12 m6">
+          <div class="card-panel grey lighten-3">
+            <h5>Entre em contato</h5>
+            <div class="input-field">
+              <input type="text" placeholder="name" id="name">
+              <label for="name">Nome</label>
+
+            </div>
+            <div class="input-field">
+              <input type="email" placeholder="email" id="email">
+              <label for="email">Email</label>
+
+            </div>
+            <div class="input-field">
+              <input type="text" placeholder="phone" id="phone">
+              <label for="phone">Telefone</label>
+
+            </div>
+            <div class="input-field">
+              <textarea class="materialize-textarea" placeholder="Enter Message" id="message"></textarea>
+              <label for="message">Mensagem</label>
+
+            </div>
+            <input type="submit" value="Enviar" class="btn ">
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- section  contatos  (fim) -->
+
+
+  <!-- Footer (início) -->
+  <footer class="section teal darken-2 white-text center">
+    <p class="flow-text">andrevv &copy; 2020</p>
+  </footer>
+  <!-- Footer (Fim) -->
   <!--Import jQuery before materialize.js-->
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
   <script type="text/javascript" src="js/materialize.min.js"></script>
