--- a/css/projetos/6_2_project_files/travelville/index.html
+++ b/css/projetos/6_2_project_files/travelville/index.html
@@ -365,7 +365,9 @@
           "Portugal": null,
           "Espanha": null,
         }
-      })
+      });
+      // Iniciar scrollspy
+      $('.scrollspy').scrollSpy();
     });
   </script>
 </body>
